# todo

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py
myweb/: settings.py
