[tool.poetry]
name = "todo"
version = "0.01"
description = "The TODO Apps"
authors = ["Jong Shik Lee <aqua@fiaa.net>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^3.2"
django-environ = "^0.9.0"
pre-commit = "^2.20.0"
ipython = "^8.6.0"
mysqlclient = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
